added code to HTML file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="card" id="html-section">
           <h2>HTML</h2>
           <ul>
-            <li>We can have as many li elements as we want</li>
+            <li>We can have as many li elements as we want.</li>
             <li>The head element contains information about the webpage.</li>
             <li>The body element represents the visible content shown to the user.</li>
           </ul>
