--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./assets/style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +14,6 @@
     </header>
     <main>
       <section class="card" id="html-section">
-        <section class="card" id="html-section">
           <h2>HTML</h2>
           <ul>
             <li>We can have as many li elements as we want.</li>
@@ -21,10 +21,8 @@
             <li>The body element represents the visible content shown to the user.</li>
           </ul>
         </section>
-      </section>
    
       <section class="card" id="css-section">
-        <section class="card" id="css-section">
           <h2>CSS</h2>
           <ul>
             <li>Enter your CSS notes here</li>
@@ -32,24 +30,19 @@
         </section>
      
         <section class="card" id="git-section">
-      </section>
       <h2>Git</h2>
       <ul>
         <li>Enter your Git notes here</li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
       </ul>
     </section>
  
-    <section class="card" id="javascript-section">
-      <section class="card" id="git-section">
-   
-      </section>
-   
-      <section class="card" id="javascript-section">
+    <section class="card" id="javascript-section">  
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
         </ul>
-      </section>
       </section>
     </main>
 
