--- a/index.html
+++ b/index.html
@@ -26,23 +26,25 @@
       <section class="card" id="css-section">
           <h2>CSS</h2>
           <ul>
-            <li>Enter your CSS notes here</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+  <li>A padding indicates how much space we want around the content inside an element.</li>
           </ul>
         </section>
      
         <section class="card" id="git-section">
       <h2>Git</h2>
       <ul>
-        <li>Enter your Git notes here</li>
-        <li>A margin indicates how much space we want around the outside of an element.</li>
-        <li>A padding indicates how much space we want around the content inside an element.</li>
+        <li>Git status: checks what branch we are currently on.</li>
+        <li>Git checkout -b branch-name: creates a new branch and switches to it.</li>
       </ul>
     </section>
  
     <section class="card" id="javascript-section">  
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>; is a function used in JavaScript</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+   <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
